; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_util.c_bitpop32.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_util.c_bitpop32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @bitpop32(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %12, %1
  %5 = load i64, i64* %2, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %15

7:                                                ; preds = %4
  %8 = load i64, i64* %2, align 8
  %9 = sub nsw i64 %8, 1
  %10 = load i64, i64* %2, align 8
  %11 = and i64 %10, %9
  store i64 %11, i64* %2, align 8
  br label %12

12:                                               ; preds = %7
  %13 = load i64, i64* %3, align 8
  %14 = add nsw i64 %13, 1
  store i64 %14, i64* %3, align 8
  br label %4

15:                                               ; preds = %4
  %16 = load i64, i64* %3, align 8
  ret i64 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
